--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "~43.0.2",
     "expo-constants": "~12.1.3",
     "expo-status-bar": "~1.1.0",
@@ -17,9 +19,11 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "*",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-web": "0.17.1",
+    "valid-url": "^1.0.9",
     "yup": "^0.32.11"
   },
   "devDependencies": {
