--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "email-validator": "^2.0.4",
     "expo": "~43.0.2",
     "expo-constants": "~12.1.3",
     "expo-status-bar": "~1.1.0",
